# pytorch_sparse

./: .coveragerc  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  backprop.py  pyproject.toml  setup.cfg  setup.py  test.py
.github/workflows/: building-conda.yml  building.yml  metis-Windows.sh  metis.sh  testing.yml
benchmark/: main.py  ptr2ind.py
cmake/: TorchSparseConfig.cmake.in
conda/: bld.bat  build.sh
conda/pytorch-sparse/: bld.bat  build_conda.sh  meta.yaml
cpu/: arange_interleave.cpp  convert.cpp  diag.cpp  rowptr.cpp  spmm.cpp  spspmm.cpp
csrc/: convert.cpp  degree_padding.cpp  diag.cpp  ego_sample.cpp  extensions.h  hgt_sample.cpp  macros.h  metis.cpp  metis_wrapper.cpp  neighbor_sample.cpp  padding.cpp  relabel.cpp  rw.cpp  saint.cpp  sample.cpp  sort.cpp  sparse.h  spmm.cpp  spmm_coo.cpp  spspmm.cpp  version.cpp
csrc/cpu/: convert_cpu.cpp  convert_cpu.h  diag_cpu.cpp  diag_cpu.h  ego_sample_cpu.cpp  ego_sample_cpu.h  hg_sample.cpp  hg_sample_cpu.cpp  hg_sample_cpu.h  hgt_sample_cpu.cpp  hgt_sample_cpu.h  metis_cpu.cpp  metis_cpu.h  metis_wrapper_cpu.cpp  neighbor_sample_cpu.cpp  neighbor_sample_cpu.h  padding_cpu.cpp  padding_cpu.h  relabel_cpu.cpp  relabel_cpu.h  rw_cpu.cpp  rw_cpu.h  saint_cpu.cpp  saint_cpu.h  sample_cpu.cpp  sample_cpu.h  sort_cpu.cpp  sort_cpu.h  spmm_coo_cpu.cpp  spmm_coo_cpu.h  spmm_cpu.cpp  spmm_cpu.h  spspmm_cpu.cpp  spspmm_cpu.h  utils.h
csrc/cuda/: atomics.cuh  convert_cuda.cu  convert_cuda.h  degree_padding_cuda.cu  degree_padding_cuda.h  diag.cpp  diag_cuda.cu  diag_cuda.h  diag_kernel.cu  padding_cuda.cu  padding_cuda.h  reducer.cuh  rw_cuda.cu  rw_cuda.h  spmm_coo_cuda.cu  spmm_coo_cuda.h  spmm_cuda.cu  spmm_cuda.h  spspmm.cpp  spspmm_cuda.cu  spspmm_cuda.h  spspmm_kernel.cu  unique_kernel.cu  utils.cuh
csrc/dynamic/: CMakeLists.txt  build.sh  dynamic_graph.h  dynamic_log.h  dynamic_store.cpp  dynamic_store.h
cuda/: convert.cpp  convert_kernel.cu  diag.cpp  diag_kernel.cu  matmul.cpp  matmul_cuda.cu  matmul_kernel.cu  rowptr.cpp  rowptr_kernel.cu  spmm.cpp  spmm_kernel.cu  spspmm.cpp  spspmm_kernel.cu  unique.cpp  unique_kernel.cu
script/: install.sh  metis.sh  wheel.py
test/: test_add.py  test_cat.py  test_coalesce.py  test_convert.py  test_degree_padding.py  test_degree_padding2.py  test_diag.py  test_ego_sample.py  test_eye.py  test_hgt_sample.py  test_index_select.py  test_jit.py  test_load.py  test_matmul.py  test_metis.py  test_mul.py  test_neighbor_sample.py  test_neighbour_sample.py  test_overload.py  test_padding.py  test_permute.py  test_rowptr.py  test_saint.py  test_sample.py  test_sort.py  test_spmm.py  test_spmm_coo.py  test_spspmm.py  test_spspmm_spmm.py  test_storage.py  test_tensor.py  test_transpose.py  test_view.py  utils.py
torch_sparse/: __init__.py  add.py  bandwidth.py  cat.py  coalesce.py  convert.py  diag.py  eye.py  index_select.py  masked_select.py  matmul.py  metis.py  mul.py  narrow.py  padding.py  permute.py  reduce.py  rw.py  saint.py  sample.py  select.py  spadd.py  sparse.py  spmm.py  spmm_coo.py  spspmm.py  storage.py  tensor.py  testing.py  transpose.py  typing.py  unique.py  utils.py  view.py
torch_sparse/utils/: unique.py
